02-Backend/kubernetes/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: astrovox-api
  namespace: astrovox-production
spec:
  selector:
    matchLabels:
      app: astrovox-api
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
    when:
    - key: request.auth.claims[role]
      values: ["admin", "user", "service-account"]
